added scale boxes

--- a/index.html
+++ b/index.html
@@ -212,13 +212,16 @@
             <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex
               design i have created yet.</p>
             <div class="blender-box">
-              <div class="blender-image">
-                <img src="https://cdn.thingiverse.com/renders/ef/17/25/7b/78/392e47046799ac00e8425d384d21c3e8_preview_featured.jpg">
+              <div class="img1">
               </div>
-              <div class="blender-image">
-                <img src="https://cdn.thingiverse.com/renders/75/da/54/54/40/e40128854231cf98eea60302b5a5b479_preview_featured.jpg">
+              <div class="img2">
+              </div>
+              <div class="img3">
+              </div>
+              <div class="img4">
               </div>
             </div>
+
             <!--  -->
           </li>
 
