--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -78,8 +75,7 @@
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
             <li>Designed a single player game called Hexwordz that is available on Google Play.</li>
             <li>Led development with a group of 3d printing enthusiasts to produce a post processing plugin for the
-              opensource
-              software known as Cura.</li>
+              opensource software known as Cura.</li>
             <li>Nine years of experience at Batteries Plus Bulbs in device repair, batteries, lighting, management,
               employee training, and customer service. </li>
           </ul>
@@ -202,13 +198,13 @@
             <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
             <!--  -->
           </li>
-
+          <!-- 
           <hr class="m-5">
 
           <li>
             <i class="blender text-blue"></i>
             <button class="dropbtn">Blender Projects</button>
-            <!--Thingiverse Embed-->
+            
             <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex
               design i have created yet.</p>
             <div class="blender-box">
@@ -220,9 +216,9 @@
               </div>
               <div class="img4">
               </div>
-            </div>
+            </div> -->
 
-            <!--  -->
+          <!--  -->
           </li>
 
         </ul>
@@ -235,48 +231,69 @@
       <div class="my-auto">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+        <div class="subheading mb-3">Programming Languages, Frameworks &amp; Tools</div>
+        <ul class="fa-lg" style="list-style-type:none; padding: 0; margin:0;">
+          <li>
+            <i class="fab fa-html5 mb-2"></i> HTML5
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+          <li>
+            <i class="fab fa-css3 mb-2"></i> CSS3
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+          <li>
+            <i class="fas fa-file-code mb-2"></i> Bootstrap
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-github"></i>
+          <li>
+            <i class="fab fa-react mb-2"></i> React
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+          <li>
+            <i class="fas fa-file-code mb-2"></i> Adonis
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+          <li>
+            <i class="fab fa-js-square mb-2"></i> Javascript
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-python"></i>
+          <li>
+            <i class="fab fa-node-js mb-2"></i> Node.js
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+          <li>
+            <i class="fab fa-npm mb-2"></i> NPM
           </li>
-        </ul>
+          <li>
+            <i class="fab fa-python mb-2"></i> Python
+          </li>
+          <li>
+            <i class="fas fa-file-code mb-2"></i> Visual Studio Code
+          </li>
+          <li>
+            <i class="fab fa-github mb-2"></i> Git
+          </li>
+          <li>
+            <i class="fas fa-terminal mb-2"></i> Terminal
+          </li>
 
+        </ul>
+      </div>
+      <div class="mt-3">
         <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
+        <ul style="list-style-type:none; padding: 0; margin:0;">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            <i class="fa fa-check"></i>
+            Responsive Design</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
+          <li>
+            <i class="fa fa-check"></i>
+            Red, Green, Refactor</li>
+          <li>
+            <i class="fa fa-check"></i>
             Cross Browser Testing &amp; Debugging</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
+            <i class="fa fa-check"></i>
             Cross Functional Teams</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            <i class="fa fa-check"></i>
+            Agile &amp; Lean Methodologies</li>
+          <li>
+            <i class="fa fa-check"></i>
+            Scrum</li>
         </ul>
       </div>
     </section>
@@ -302,6 +319,7 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Montana State University</h3>
             <div class="subheading mb-3">Computer Science</div>
+            <div>Classes in Java with BlueJ, Java Data Structures, HTML &amp; CSS, and Computer Ethics.</div>
             <div>1.5 Years</div>
           </div>
           <div class="resume-date text-md-right">
@@ -313,6 +331,8 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Powell County High School</h3>
             <div class="subheading mb-3">General Studies</div>
+            <div>Classes in Basic, Logo, HTML.</div>
+            <div>4 Years</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2001 - May 2005</span>
@@ -323,7 +343,8 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Device Repair Technician Certification</h3>
-            <div class="subheading mb-3">Building skills needed to repair phones and tablets. Learning best practices
+            <div class="subheading mb-3">Apple and Samsung Devices.</div>
+            <div>Built skills needed to repair phones and tablets. Learned best practices
               to follow to maintain organization.</div>
             <div>3 Day Course</div>
           </div>
@@ -346,17 +367,22 @@
             <div class="subheading mb-3">Batteries Plus Bulbs</div>
             <ul>
               <li>
-                Trained employees webbased computer pos system
+                Trained new employees to use webbased computer Point of Sale.
               </li>
               <li>
-                Developed methods for training new employees.
+                Developed methods for training new employees with examples they can relate with.
               </li>
               <li>
-                Assisted Customers
+                Assisted Customers with rapid problem solving, supplying knowledge, and often creating solutions unique
+                to that customer.
+              </li>
+              <li>
+                Maintained inventory min/max values.
+              </li>
+              <li>
+                Ordered product replenishments and special orders through multiple venders.
               </li>
             </ul>
-            <p>Assisted Customers. Maintained inventory min/max values. Ordered product replenishments and special
-              orders through multiple venders. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2009 - December 2018</span>
@@ -367,8 +393,15 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Associate</h3>
             <div class="subheading mb-3">Quiznos</div>
-            <p>Assisted Customers in a team environment. Counted inventory and ordered replenishments, Programmed new
-              items into Point of Sale</p>
+            <li>
+              Assisted Customers in a close team environment.
+            </li>
+            <li>
+              Counted inventory and ordered replenishments.
+            </li>
+            <li>
+              Programmed new items into Point of Sale.
+            </li>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2007 - April 2009</span>
@@ -401,16 +434,6 @@
       </div>
 
     </section>
-
-    <!-- INTERESTS -->
-    <hr class="m-0">
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-      <div class="my-auto">
-        <h2 class="mb-5">Interests</h2>
-        <p>I am a problem solver. 3D printing is one of my more recent hobbies.</p>
-      </div>
-    </section>
-
   </div>
 
   <!-- Bootstrap core JavaScript -->
