--- a/index.html
+++ b/index.html
@@ -393,15 +393,17 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Associate</h3>
             <div class="subheading mb-3">Quiznos</div>
-            <li>
-              Assisted Customers in a close team environment.
-            </li>
-            <li>
-              Counted inventory and ordered replenishments.
-            </li>
-            <li>
-              Programmed new items into Point of Sale.
-            </li>
+            <ul>
+              <li>
+                Assisted Customers in a close team environment.
+              </li>
+              <li>
+                Counted inventory and ordered replenishments.
+              </li>
+              <li>
+                Programmed new items into Point of Sale.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2007 - April 2009</span>
@@ -412,8 +414,17 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Detail and Service Washer</h3>
             <div class="subheading mb-3">Helena Motors</div>
-            <p>Cleaned and washed cars. Moved customer vehicles. Maintained a clean workspace. Organized between sales
-              team and detail team. </p>
+            <ul>
+              <li>
+                Communicated with sales department and detail department.
+              </li>
+              <li>
+                Cleaned and washed cars in a fast paced environment.
+              </li>
+              <li>
+                Maintained a clean organized workspace.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2006 - August 2006</span>
@@ -424,7 +435,17 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Avon Family Cafe</h3>
             <div class="subheading mb-3">Head Cook</div>
-            <p>Decided and organized daily soup and special. Taught new employees skills to help the team unite. </p>
+            <ul>
+              <li>
+                Compiled and organized daily soup and special.
+              </li>
+              <li>
+                Prepared Breakfast Lunch and Dinner in a team environment.
+              </li>
+              <li>
+                Learned new skills and passed on to new employees.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2002 - December 2005</span>
