--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
 
@@ -28,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Robert Crum</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile img-thumbnail mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -135,20 +136,20 @@
 
 
             </ul>
-            <div>
-              <img height="200" src="https://lh3.googleusercontent.com/w87PTM7TosD8SZfKhHsSKq7snizwu5KcrnbNUrCeUuYSOZV0E5cVW2teBFAWYURVN4y8=w720-h310-rw"
+            <div style="max-width:100%; max-height: 300px;" class="mb-1">
+              <img style="max-height: 100%; max-width: 24%" src="https://lh3.googleusercontent.com/w87PTM7TosD8SZfKhHsSKq7snizwu5KcrnbNUrCeUuYSOZV0E5cVW2teBFAWYURVN4y8=w720-h310-rw"
                 alt="hexwordz game image 1" />
-              <img height="200" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
+              <img style="max-height: 100%; max-width: 24%" src="https://lh3.googleusercontent.com/Sz2X7pwO_UUkVFcDofEhI7vjfZLP_APwpVuqH158IpDm4-DIl-S24WJjM6UjKA8xlw=w720-h310-rw"
                 alt="hexwordz game image 2" />
-              <img height="200" src="https://lh3.googleusercontent.com/WArKqZMYCyhLdkCeMemah2XENGYSFUJIuLdNuPDiK7Pgge6S20hjL3Qx5JpA1VIo5A=w720-h310-rw"
+              <img style="max-height: 100%; max-width: 24%" src="https://lh3.googleusercontent.com/WArKqZMYCyhLdkCeMemah2XENGYSFUJIuLdNuPDiK7Pgge6S20hjL3Qx5JpA1VIo5A=w720-h310-rw"
                 alt="hexwordz game image 3" />
-              <img height="200" src="https://lh3.googleusercontent.com/FSPp82Z_UK2mPWrOF1paaWY61b675hLc0BkXrSPE7qUS72NQhBDYwrNx17WDuPelfVCi=w720-h310-rw"
+              <img style="max-height: 100%; max-width: 24%" src="https://lh3.googleusercontent.com/FSPp82Z_UK2mPWrOF1paaWY61b675hLc0BkXrSPE7qUS72NQhBDYwrNx17WDuPelfVCi=w720-h310-rw"
                 alt="hexwordz game image 4" />
-
             </div>
-            <div>
-              <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
-                  alt='Get it on Google Play' height="70" src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' /></a>
+            <div style="width:25%; margin:-5px;">
+              <a href='https://play.google.com/store/apps/details?id=com.gargansa.hexwordz&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                <img style="width:100%" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png' />
+              </a>
             </div>
           </li>
 
@@ -197,28 +198,6 @@
             </p>
             <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
             <!--  -->
-          </li>
-          <!-- 
-          <hr class="m-5">
-
-          <li>
-            <i class="blender text-blue"></i>
-            <button class="dropbtn">Blender Projects</button>
-            
-            <p>Created a replacement part for the M3D Promega printer. Designed in Blender, it is the most complex
-              design i have created yet.</p>
-            <div class="blender-box">
-              <div class="img1">
-              </div>
-              <div class="img2">
-              </div>
-              <div class="img3">
-              </div>
-              <div class="img4">
-              </div>
-            </div> -->
-
-          <!--  -->
           </li>
 
         </ul>
