--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
     </div>
   </nav>
 
-  <!-- <p class="codepen" data-height="332" data-theme-id="0" data-default-tab="result" data-user="gargansa" data-slug-hash="zMOZaK" style="height: 332px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="#codevember - 09 - Recursive Tree"> -->
-
   <div class="container-fluid p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
@@ -262,6 +260,14 @@
         <ul style="list-style-type:none; padding: 0; margin:0;">
           <li>
             <i class="fa fa-check"></i>
+            Self Motivated</li>
+          <li>
+          <li>
+            <i class="fa fa-check"></i>
+            Self Reliant</li>
+          <li>
+          <li>
+            <i class="fa fa-check"></i>
             Responsive Design</li>
           <li>
           <li>
@@ -272,7 +278,7 @@
             Cross Browser Testing &amp; Debugging</li>
           <li>
             <i class="fa fa-check"></i>
-            Cross Functional Teams</li>
+            Cross Functional</li>
           <li>
             <i class="fa fa-check"></i>
             Agile &amp; Lean Methodologies</li>
