--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <span class="text-primary">Crum</span>
         </h1>
         <div class="subheading mb-5">52 Elmwood Dr · Bozeman, MT 59718 · (406) 431-1811 ·
-          <a href="mailto:gargansa@hotmail.com">gargansa@hotmail.com</a>
+          <a href="mailto:robertdcrum@gmail.com">robertdcrum@gmail.com</a>
         </div>
         <p class="lead mb-5">
           <ul>
