--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <li>Previous computer science student at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
             <li>Designed a single player game called Hexwordz that is available on Google Play.</li>
-            <li>Led development with a group of 3d printing enthusiasts to produce a post processing plugin for the
-              opensource software known as Cura.</li>
+            <li>Lead developer along with a group of 3d printing enthusiasts to produce a post processing plugin for the
+              open source software known as Cura.</li>
             <li>Nine years of experience at Batteries Plus Bulbs in device repair, batteries, lighting, management,
               employee training, and customer service. </li>
           </ul>
@@ -156,10 +156,10 @@
             <button class="dropbtn">MELT - Multi-Extruder Layering Tool</button>
             <ul>
               <li>
-                Led development to build a python plugin for an open source software known as Cura.
+                Lead developer, along with a group of 3d printing enthusiasts. Together we produced a python plugin for an open source software known as Cura.
               </li>
               <li>
-                The project enabled 3d printers such as the Promega and Crane made by M3D, mix plastics within the
+                The project enabled 3d printers such as the Promega and Crane (made by M3D), mix plastics within the
                 nozzle at varying rates.
               </li>
               <li>
@@ -186,7 +186,7 @@
             <ul>
               <li>Created a recursive tree generator.</li>
               <li>Initially it calls a function called createBranch, with a tastefully controlled random color.</li>
-              <li>Within createBranch it draw the branch and recursivly call 2-3 more createBranch functions.</li>
+              <li>Within createBranch it draws the branch and recursivly calls 2-3 more createBranch functions.</li>
               <li>Each time we call createBranch it reduces the branch length, adjusts the color slightly, and picks a
                 new random angle.</li>
               <li>Once the branch length is small enough it stops creating branches and places a leaf with a color
