--- a/index.html
+++ b/index.html
@@ -192,13 +192,22 @@
               <li>Once the branch length is small enough it stops creating branches and places a leaf with a color
                 composed of rotated rgb values on the end.</li>
             </ul>
-            <!--Codepen Embed-->
-            <p class="codepen" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
+            <!--Codepen Embed Old Version-->
+            <!-- <p class="codepen" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa"
               data-slug-hash="zMOZaK" data-preview="true" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
               data-pen-title="#codevember - 09 - Recursive Tree">
               <span>See the Pen <a href="https://codepen.io/gargansa/pen/zMOZaK/">
                   #codevember - 09 - Recursive Tree</a> by Robert Crum (<a href="https://codepen.io/gargansa">@gargansa</a>)
                 on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://static.codepen.io/assets/embed/ei.js"></script> -->
+            <!--Codepen Embed New Version-->
+            <p class="codepen" data-height="412" data-theme-id="0" data-default-tab="result" data-user="gargansa" 
+            data-slug-hash="zMOZaK" style="height: 412px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" 
+            data-pen-title="#codevember - 09 - Recursive Tree">
+              <span>See the Pen <a href="https://codepen.io/gargansa/pen/zMOZaK/">
+              #codevember - 09 - Recursive Tree</a> by Robert Crum (<a href="https://codepen.io/gargansa">@gargansa</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
             </p>
             <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
             <!--  -->
