--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <button class="dropbtn">Codepen Recursive Tree</button>
             <ul>
               <li>Created a recursive tree generator.</li>
-              <li>Initially it calls a function called createBranch, with a tastefully controlled random color.</li>
+              <li>Initially it calls a function called createBranch, with a random color.</li>
               <li>Within createBranch it draws the branch and recursivly calls 2-3 more createBranch functions.</li>
               <li>Each time we call createBranch it reduces the branch length, adjusts the color slightly, and picks a
                 new random angle.</li>
