--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p class="lead mb-5">
           <ul>
             <li>Tier I support technician at Zoot Enterprises</li>
-            <li>Previous graduate of Montana Code School</li>
+            <li>Graduate of Montana Code School</li>
             <li>Studied computer science at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
             <li>Designed a single player game called Hexwordz that is available on Google Play.</li>
@@ -113,17 +113,17 @@
                 Hexwordz is a game where you search for words, the larger the word the more points you gain.
               </li>
               <li>
-                It con
-              </li>
-              <li>
 
-                Hexwordz contains several algorithms i developed.
+                Hexwordz contains several algorithms i composed.
                 <ul style="list-style: none">
                   <li>
-                    A dictionary function that quickly determines if the word selected is valid.
+                    Dictionary function that quickly determines if the word selected is valid.
                   </li>
                   <li>
-                    A recursive function that determines if any possible answers remain on the board.
+                    Recursive function that determines if any possible answers remain on the board.
+                  </li>
+                  <li>
+                    Score system that progressively makes the game more difficult as you complete levels.
                   </li>
                 </ul>
               </li>
@@ -162,7 +162,7 @@
                 an open source software known as Cura.
               </li>
               <li>
-                The project enabled 3d printers such as the Promega and Crane (made by M3D), mix plastics within the
+                The project enabled 3d printers such as the Promega and Crane (made by M3D), to mix plastics within the
                 nozzle at varying rates.
               </li>
               <li>
@@ -185,15 +185,12 @@
 
           <li>
             <i class="fa-li fab fa-codepen text-blue"></i>
-            <button class="dropbtn">Codepen Recursive Tree</button>
+            <button class="dropbtn">Codepen - Recursive Tree</button>
             <ul>
-              <li>Created a recursive tree generator.</li>
-              <li>Initially it calls a function called createBranch, with a random color.</li>
-              <li>Within createBranch it draws the branch and recursivly calls 2-3 more createBranch functions.</li>
-              <li>Each time we call createBranch it reduces the branch length, adjusts the color slightly, and picks a
+              <li>Using a recursive function i draw a branch with a random color and call the same function 2-3 more times.</li>
+              <li>Each call to the function reduces the branch length, adjusts the color slightly, and picks a
                 new random angle.</li>
-              <li>Once the branch length is small enough it stops creating branches and places a leaf with a color
-                composed of rotated rgb values on the end.</li>
+              <li>Once the branch length is small enough it stops calling the function and places a leaf on the end.</li>
             </ul>
             <p class="codepen" data-height="500" data-theme-id="0" data-default-tab="result" data-user="gargansa"
               data-slug-hash="zMOZaK"
@@ -218,8 +215,17 @@
       <div class="my-auto">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages, Frameworks &amp; Tools</div>
+        <div class="subheading mb-3">Operating Systems, Programming Languages, Frameworks &amp; Tools</div>
         <ul class="fa-lg" style="list-style-type:none; padding: 0; margin:0;">
+          <li>
+            <i class="fab fa-windows mb-2"></i> Windows
+          </li>
+          <li>
+            <i class="fab fa-linux mb-2"></i> Linux
+          </li>
+          <li>
+            <i class="fab fa-apple mb-2"></i> Mac
+          </li>
           <li>
             <i class="fab fa-html5 mb-2"></i> HTML5
           </li>
