--- a/index.html
+++ b/index.html
@@ -187,10 +187,12 @@
             <i class="fa-li fab fa-codepen text-blue"></i>
             <button class="dropbtn">Codepen - Recursive Tree</button>
             <ul>
-              <li>Using a recursive function i draw a branch with a random color and call the same function 2-3 more times.</li>
+              <li>Using a recursive function i draw a branch with a random color and call the same function 2-3 more
+                times.</li>
               <li>Each call to the function reduces the branch length, adjusts the color slightly, and picks a
                 new random angle.</li>
-              <li>Once the branch length is small enough it stops calling the function and places a leaf on the end.</li>
+              <li>Once the branch length is small enough it stops calling the function and places a leaf on the end.
+              </li>
             </ul>
             <p class="codepen" data-height="500" data-theme-id="0" data-default-tab="result" data-user="gargansa"
               data-slug-hash="zMOZaK"
