--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
           <li>
             <i class="fab fa-linux mb-2"></i> Linux
           </li>
+          </li>
           <li>
             <i class="fab fa-apple mb-2"></i> Mac
           </li>
@@ -261,8 +262,12 @@
           <li>
             <i class="fab fa-github mb-2"></i> Git
           </li>
-          <li>
-            <i class="fas fa-terminal mb-2"></i> Terminal
+          <li style="margin-top: -10px;">
+              <span class="fa-stack mb-3" style="font-size: 0.5em; margin-top: 10px; ">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fas fa-terminal fa-stack-1x fa-inverse"></i>
+                </span> Terminal
+            <!-- <i class="fas fa-terminal mb-2"></i> Terminal -->
           </li>
 
         </ul>
@@ -375,11 +380,11 @@
               Prioritized and triaged incoming support requests.
             </li>
             <li>
-              Compiled and condensed information in a presentable fashion, to facilitate easier work flow for future
+              Compiled and condensed information to a presentable fashion, to facilitate easier work flow for future
               issues.
             </li>
             <li>
-              Assisted teams with production research.
+              Assisted team with production research.
             </li>
             <li>
               Worked together with team to find solutions, determine root cause, and resolve issues.
