--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         </div>
         <p class="lead mb-5">
           <ul>
-            <li>Tier I support technician at Zoot Enterprises</li>
+            <li>Tier II support technician at Zoot Enterprises</li>
             <li>Graduate of Montana Code School</li>
             <li>Studied computer science at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
-            <li>Designed a single player game called Hexwordz that is available on Google Play.</li>
+            <li>Designed a single player game called Hexwordz.</li>
             <li>Lead developer along with a group of 3d printing enthusiasts to produce a post processing plugin for the
               open source software known as Cura.</li>
             <li>Nine years of experience at Batteries Plus Bulbs in device repair, batteries, lighting, management,
@@ -100,6 +100,25 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
+        <ul class="fa-ul mb-0">
+          <li class="wrapper">
+            <i class="fa-li fab fa-google-play text-blue"></i>
+            <button class="dropbtn">Tutorial Blog</button>
+            <ul>
+              <li>
+                Created a tutorial site to help develop understanding of complex subjects.
+              </li>
+              <li>
+                <a href="https://gargansa.github.io/tutorial">Visit Page</a>
+              </li>
+              <embed src="https://gargansa.github.io/tutorial" style="pointer-events: fill; width:75%; height: 300px;">
+            </ul>
+          </li>
+        </ul>
+
+        </li>
+
+        <hr class="m-5">
 
         <ul class="fa-ul mb-0">
           <li class="wrapper">
@@ -114,7 +133,7 @@
               </li>
               <li>
 
-                Hexwordz contains several algorithms i composed.
+                Hexwordz contains several algorithms I composed.
                 <ul style="list-style: none">
                   <li>
                     Dictionary function that quickly determines if the word selected is valid.
@@ -158,11 +177,13 @@
             <button class="dropbtn">MELT - Multi-Extruder Layering Tool</button>
             <ul>
               <li>
-                Lead developer, along with a group of 3d printing enthusiasts. Together we produced a python plugin for
+                Lead developer, along with a group of 3d printing enthusiasts. Together we produced a python plugin
+                for
                 an open source software known as Cura.
               </li>
               <li>
-                The project enabled 3d printers such as the Promega and Crane (made by M3D), to mix plastics within the
+                The project enabled 3d printers such as the Promega and Crane (made by M3D), to mix plastics within
+                the
                 nozzle at varying rates.
               </li>
               <li>
@@ -187,7 +208,7 @@
             <i class="fa-li fab fa-codepen text-blue"></i>
             <button class="dropbtn">Codepen - Recursive Tree</button>
             <ul>
-              <li>Using a recursive function i draw a branch with a random color and call the same function 2-3 more
+              <li>Using a recursive function I draw a branch with a random color and call the same function 2-3 more
                 times.</li>
               <li>Each call to the function reduces the branch length, adjusts the color slightly, and picks a
                 new random angle.</li>
@@ -263,10 +284,10 @@
             <i class="fab fa-github mb-2"></i> Git
           </li>
           <li style="margin-top: -10px;">
-              <span class="fa-stack mb-3" style="font-size: 0.5em; margin-top: 10px; ">
-                  <i class="fa fa-square fa-stack-2x"></i>
-                  <i class="fas fa-terminal fa-stack-1x fa-inverse"></i>
-                </span> Terminal
+            <span class="fa-stack mb-3" style="font-size: 0.5em; margin-top: 10px; ">
+              <i class="fa fa-square fa-stack-2x"></i>
+              <i class="fas fa-terminal fa-stack-1x fa-inverse"></i>
+            </span> Terminal
             <!-- <i class="fas fa-terminal mb-2"></i> Terminal -->
           </li>
 
@@ -277,7 +298,8 @@
         <ul style="list-style-type:none; padding: 0; margin:0;">
           <li>
             <i class="fa"></i>
-            I am a self motivated and reliable individual. I believes honest hard work is the direct path to success.
+            I am a self-starting self-reliant individual. I believes honest hard work and leading by example is the
+            direct path to success.
           </li>
           <li>
         </ul>
@@ -300,7 +322,7 @@
           Cross Functional</li>
         <li>
           <i class="fa fa-check"></i>
-          Agile &amp; Lean Methodologies</li>
+          Agile Methodologies</li>
         <li>
           <i class="fa fa-check"></i>
           Scrum</li>
@@ -373,21 +395,41 @@
 
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
         <div class="resume-content mr-auto">
-          <h3 class="mb-0">Tier I Support Technician</h3>
+          <h3 class="mb-0">Tier II Support Technician</h3>
           <div class="subheading mb-3">Zoot Enterprises</div>
+          Main duties:
           <ul>
             <li>
-              Prioritized and triaged incoming support requests.
+              Triage and work to resolve a variety of Jira tickets including alerts generated automatically in the
+              production environment.
             </li>
             <li>
-              Compiled and condensed information to a presentable fashion, to facilitate easier work flow for future
-              issues.
+              Assist internal users remotely and locally with VPN troubleshooting as well software and hardware issues.
             </li>
             <li>
-              Assisted team with production research.
+              Test and replace rack mount and desktop UPS batteries and units.
+            </li>
+            <li>
+              Use Bash and Python to create repeatable solutions to common problems.
             </li>
             <li>
               Worked together with team to find solutions, determine root cause, and resolve issues.
+            </li>
+          </ul>
+          Additional Roles:
+          <ul>
+            <li>
+              Lead Certificate Validator, ensure certificates are properly installed and facilitate communications
+              between project team, client, and certificate team.
+            </li>
+            <li>
+              Subject matter expert for internal pc hardware/software issues.
+            </li>
+            <li>
+              Maintain documentation for commonly occurring issues.
+            </li>
+            <li>
+              Primary escalation point for VPN connection issues.
             </li>
           </ul>
         </div>
@@ -400,23 +442,39 @@
         <div class="resume-content mr-auto">
           <h3 class="mb-0">Assistant Manager</h3>
           <div class="subheading mb-3">Batteries Plus Bulbs</div>
+          Main Duties:
           <ul>
             <li>
-              Trained new employees to use web based Point of Sale system.
+              Primary escalation point for any challenges that arise.
             </li>
             <li>
-              Developed methods for training new employees. Such as creating presentations for subject matters, guiding
-              through software and knowledge resources, and measuring response through practice quizzes.
+              Ordered product replenishments including special orders through multiple venders.
             </li>
             <li>
-              Assisted Customers with rapid problem solving, supplying knowledge, and often developing solutions unique
-              to each customer.
+              Preformed Inventory counts and maintain min/max values.
             </li>
             <li>
-              Maintained inventory min/max values in an ever changing market.
+              Developed methods for training new employees.
             </li>
             <li>
-              Ordered product replenishments and special orders, which required communication with multiple venders.
+              Assisted Customers with rapid problem solving, supplying knowledge, and often creating solutions unique to
+              that customer.
+            </li>
+          </ul>
+          Additional Roles:
+          <ul>
+            <li>
+              Head device repair technician, demoed repair steps for new employees, provided solutions for challenging
+              repairs.
+            </li>
+            <li>
+              Assemble unique battery packs for antiquated devices.
+            </li>
+            <li>
+              Solder/repair broken devices including key fobs, battery packs, remote controls, etc.
+            </li>
+            <li>
+              Test, diagnose and install vehicle and rv batteries.
             </li>
           </ul>
         </div>
@@ -429,15 +487,16 @@
         <div class="resume-content mr-auto">
           <h3 class="mb-0">Associate</h3>
           <div class="subheading mb-3">Quiznos</div>
+          Main Duties:
           <ul>
             <li>
-              Assisted Customers in a close team environment.
+              Assisted customers with orders in a close team environment.
             </li>
             <li>
-              Counted inventory and ordered replenishments.
+              Counted inventory and ordered replenishment products.
             </li>
             <li>
-              Programmed new items into Point of Sale.
+              Programmed new products into Point of Sale system.
             </li>
           </ul>
         </div>
@@ -450,6 +509,7 @@
         <div class="resume-content mr-auto">
           <h3 class="mb-0">Detail and Service Washer</h3>
           <div class="subheading mb-3">Helena Motors</div>
+          Main Duties:
           <ul>
             <li>
               Communicated with sales department and detail department.
@@ -458,7 +518,7 @@
               Cleaned and washed cars in a fast paced environment.
             </li>
             <li>
-              Maintained a clean organized workspace.
+              Maintained equipment and workplace.
             </li>
           </ul>
         </div>
@@ -471,15 +531,16 @@
         <div class="resume-content mr-auto">
           <h3 class="mb-0">Avon Family Cafe</h3>
           <div class="subheading mb-3">Head Cook</div>
+          Main Duties:
           <ul>
             <li>
-              Compiled and organized daily soup and special.
+              Prepared Breakfast, Lunch, and Dinner in a team environment.
             </li>
             <li>
-              Prepared Breakfast Lunch and Dinner in a team environment.
+              Planned and produced daily soup and special.
             </li>
             <li>
-              Learned new skills and passed on to new employees.
+              Trained new employees to be hardworking, self-reliant, and self-starting.
             </li>
           </ul>
         </div>
