changed tutorial blog icon

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h2 class="mb-5">Projects</h2>
         <ul class="fa-ul mb-0">
           <li class="wrapper">
-            <i class="fa-li fab fa-google-play text-blue"></i>
+            <i class="fas fa-file-code mb-2 text-blue"></i>
             <button class="dropbtn">Tutorial Blog</button>
             <ul>
               <li>
