Adjusted Main about me

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <p class="lead mb-5">
           <ul>
             <li>Tier II support technician at Zoot Enterprises</li>
-            <li>Graduate of Montana Code School</li>
-            <li>Studied computer science at Montana State University.</li>
+            <li>Graduate of Montana Code School - March 2019</li>
+            <li>Previous computer science student at Montana State University.</li>
             <li>Proficient in Python, Javascript, CSS3, HTML5, React, Adonis, Bootstrap.</li>
             <li>Designed a single player game called Hexwordz.</li>
             <li>Lead developer along with a group of 3d printing enthusiasts to produce a post processing plugin for the
