--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <span class="fa-stack mb-3" style="font-size: 0.5em; margin-top: 10px; ">
               <i class="fa fa-square fa-stack-2x"></i>
               <i class="fas fa-terminal fa-stack-1x fa-inverse"></i>
-            </span> Terminal
+            </span> Bash Terminal
             <!-- <i class="fas fa-terminal mb-2"></i> Terminal -->
           </li>
 
