--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <i class="fas fa-file-code mb-2"></i> Visual Studio Code
           </li>
           <li>
-            <i class="fab fa-github mb-2"></i> Git
+            <i class="fab fa-github mb-2"></i> Git / Github
           </li>
           <li style="margin-top: -10px;">
             <span class="fa-stack mb-3" style="font-size: 0.5em; margin-top: 10px; ">
