--- a/index.html
+++ b/index.html
@@ -376,8 +376,7 @@
         <div class="resume-content mr-auto">
           <h3 class="mb-0">Device Repair Technician Certification</h3>
           <div class="subheading mb-3">Apple and Samsung Devices.</div>
-          <div>Built skills needed to repair phones and tablets. Learned best practices
-            to follow to maintain organization.</div>
+          <div>Developed skills needed to appropriately repair Android and IOS devices.</div>
           <div>3 Day Course</div>
         </div>
         <div class="resume-date text-md-right">
